# MSP430-Blinky

./: .gdbinit  .gitmodules
msp430_blinky/: Cargo.toml
msp430_blinky/.cargo/: config
msp430_blinky/src/: main.rs  panic.rs
