[package]
name = "msp430_blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msp430 = "0.4.0"
msp430-rt = "0.4.0"

[dependencies.msp430fr2x5x-hal]
path = "../msp430fr2x5x-hal"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.msp430fr2355]
path = "../msp430fr2355"
version = "0.4.2"
features = ["rt"]

[profile.dev.package."*"]
opt-level = "z"